# flatted

./: CHANGELOG.md  Cargo.toml  README.md
src/: json.rs  lib.rs  parse.rs  stringify.rs  value.rs
tests/: allowlist_array_elements.rs  cyclic_eq.rs  data_json.rs  deep_nesting.rs  errors.rs  float_format.rs  golden_hash.rs  json_deep_arrays.rs  large_files.rs  number_grammar.rs  primitives.rs  public_api.rs  reviver.rs  roundtrip_identity.rs  space_clamp.rs  stringify_golden.rs  tilde_and_specials.rs  to_from_json.rs  wire_edge_cases.rs
tests/common/: mod.rs
