[package]
name = "flatted"
version = "0.1.0"
edition = "2021"
description = "serialize/deserialize JSON containing circular references"
license = "MIT"
repository = "https://github.com/hey-jj/flatted"
readme = "README.md"

[dependencies]

[dev-dependencies]
# Hashing for the language-independent golden over a large real-world file.
sha2 = "0.10"
