[package]
name = "flatted"
version = "0.2.0"
edition = "2021"
description = "Serialize and parse JSON with circular and shared references"
license = "MIT"
repository = "https://github.com/hey-jj/flatted"
readme = "README.md"
keywords = ["json", "circular", "serialize", "cycle", "reference"]
categories = ["encoding", "parser-implementations"]

[dependencies]

[dev-dependencies]
# Hashing for the language-independent golden over a large real-world file.
sha2 = "0.10"
